# tono-politico

./: .gitignore  AGENTS.md  README.md  check.sh  clean.sh  main.py  pyproject.toml  scripts_smoke_speech2text.py
.hermes/plans/: 2026-07-09_213000-speech2text-desacoplamiento.md  2026-07-09_213100-discursive-approach-desacoplamiento.md  2026-07-10-speech2text-audit-roadmap.md  2026-07-10-speech2text-metadata-provenance-plan.md
config/: config.yaml  speech2text-quick.yaml
docs/: component_audio_fetcher.md  component_speaker_timestamps.md  component_transcribe_speech.md  componente-1-5-diarizacion.md  componente-1-ingesta.md  componente-2-segmentacion.md  componente-3-temas.md  componente-4-filtrado.md  componente-5-tono.md  componente-6-salida.md  componente-diarizacion.md  componente-discursive-approach.md  componente-ingesta.md  componente-speech2text.md  configuracion.md  module-speech2text.md
docs/plans/: 2026-07-06-auditoria-arquitectura-tests-ejecucion.md
scripts/: check.sh
src/tono_politico/: config.py  models.py  protocol.py
tests/: conftest.py  test_actor_transcript_serializacion.py  test_agrupacion.py  test_argument_shape.py  test_argument_shape_smoke.py  test_audio.py  test_audio_fetcher_audio.py  test_audio_fetcher_cache.py  test_audio_fetcher_models.py  test_audio_fetcher_playlist.py  test_audio_fetcher_service.py  test_breakpoints.py  test_config.py  test_diarizacion_adapter.py  test_diarizacion_alineacion.py  test_diarizacion_diarizar.py  test_diarizacion_matching.py  test_diarizacion_models.py  test_diarizacion_perfil_voz.py  test_diarizacion_service.py  test_discursive_approach_service.py  test_enfoques_serializacion.py  test_execution_actor_transcript_artifacts.py  test_execution_main_cli.py  test_execution_observability.py  test_execution_plan.py  test_execution_runner.py  test_execution_speech2text_contracts.py  test_execution_speech2text_provenance.py  test_fecha_propagacion.py  test_filtrado.py  test_ingesta.py  test_ingesta_errors.py  test_main_cli.py  test_metadata_propagation.py  test_perfil_desde_output.py  test_pipeline_discursive.py  test_pipeline_manifest.py  test_pipeline_models.py  test_pipeline_runner.py  (+25 more)
tests/speech2text/: test_actor_clip.py  test_audio_fetcher_audio.py  (+10 more)
(+105 files in other folders)
