[project]
name = "tono-politico"
version = "0.1.0"
description = "Análisis NLP del tono de actores políticos mexicanos en discursos de YouTube"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2024.1.0",
    "openai-whisper>=20231117",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.5.0",
    "bertopic>=0.16.0",
    "spacy>=3.7.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
tono-politico = "tono_politico.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tono_politico"]

[tool.pytest.ini_options]
testpaths = ["tests"]
