[project]
name = "tono-politico"
version = "0.1.0"
description = "Análisis NLP del tono de actores políticos mexicanos en discursos de YouTube"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2024.1.0",
    "openai-whisper>=20231117",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.5.0",
    "bertopic>=0.16.0",
    "spacy>=3.7.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
tono-politico = "tono_politico.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tono_politico"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests que cargan modelos pesados (LFM2.5, spaCy, etc.)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# zero_shot.py contiene prompts de texto natural que exceden 100 chars
"src/tono_politico/tono/zero_shot.py" = ["E501"]
# taxonomia.py contiene prototipos de texto natural que exceden 100 chars
"src/tono_politico/tono/taxonomia.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["tono_politico"]

[tool.ty.environment]
python-version = "3.11"
